--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -90,6 +90,13 @@ button {
   }
 }
 
+.small-only {
+  display: none;
+  @include device-l {
+    display: block;
+  }
+}
+
 .desktop-only {
   display: block;
   @include device-m {
