--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -337,6 +337,13 @@
   position: absolute;
   right: 10vw;
   width: 14vw;
+  :global {
+    path, line, circle {
+      transition: fill $transition-normal ease-in-out, stroke $transition-normal ease-in-out;
+      will-change: fill, stroke;
+    }
+    .cls-1{fill:none;stroke:#f1f2f2;stroke-miterlimit:10;}
+  }
 }
 
 .virtuousCycle {
@@ -455,6 +462,11 @@
           .cls-5{stroke:$color-darkGrey;stroke-width:0.62px;}
           .cls-6{fill:$color-darkGrey;}
           .cls-7{fill:$color-darkGrey;}
+        }
+      }
+      .puppyImage {
+        :global {
+          .cls-1{fill:none;stroke:$color-darkGrey;stroke-miterlimit:10;}
         }
       }
     }
