logo scroll to top

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -17,6 +17,7 @@
   .logo {
     height: 35px;
     margin-left: 5px;
+    cursor: pointer;
     :global {
       .base-line {
         transition: fill $transition-normal ease-in-out;
