--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -32,6 +32,20 @@
       }
     }
   }
+  
+  .backgroundGradient {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba($color-black, 0.6);
+    mask-image: linear-gradient(to top, transparent 0%, black 25%, black 75%, transparent 95%);
+    display: none;
+    @include device-m {
+      display: block;
+    }
+  }
 
   .content {
     position: relative;
