--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -371,14 +371,27 @@
 
 .puppyImage {
   position: absolute;
+  top: -10vh;;
   right: 10vw;
-  width: 14vw;
+  width: 15vw;
+
   :global {
     path, line, circle {
       transition: fill $transition-normal ease-in-out, stroke $transition-normal ease-in-out;
       will-change: fill, stroke;
     }
     .cls-1{fill:none;stroke:#f1f2f2;stroke-miterlimit:10;}
+  }
+  @include device-l {
+    top: -20vh;
+    right: 0;
+    width: 20vw;
+  }
+  @include device-m {
+    // left: 35%;
+    right: 40%;
+    width: 20vw;
+    top: -15vh;
   }
 }
 
