--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $text-size-l: 52px;
 $text-size-ml: 30px;
 $text-size-m: 22px;
 $text-size-s: 16px;
+$text-size-xs: 12px;
 
 $color-white: #ffffff;
 $color-black: #000000;
