only use background effect for desktop

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -21,6 +21,14 @@ html, body {
   font-family: $typeface;
 }
 
+body {
+  transition: background-color $transition-normal ease-in-out;
+  background-color: $color-black;
+  &.is-light-mode {
+    background-color: $color-white;
+  }
+}
+
 .App {
   position: absolute;
   width: 100vw;
