--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -14,6 +14,11 @@
   will-change: transform;
   z-index: $layer-9;
   
+  @include device-m {
+    padding: 0 $spacing-ml;
+    transition-duration: 0ms;
+  }
+  
   .logo {
     height: 35px;
     margin-left: 5px;
@@ -37,8 +42,14 @@
     position: fixed;
     transition: background-color $transition-normal ease-in-out, transform $transition-normal $easeOutCubic;
     background-color: rgba($color-black, 0.8);
+    &.menuOpen {
+      background-color: rgba($color-black, 0);
+    }
     &.lightMode {
       background-color: rgba($color-white, 0.9);
+      &.menuOpen {
+        background-color: rgba($color-white, 0);
+      }
     }
   }
   
@@ -46,181 +57,81 @@
     position: fixed;
     transition: background-color $transition-normal ease-in-out, transform $transition-normal $easeOutCubic;
     background-color: rgba($color-black, 0.8);
+    &.menuOpen {
+      background-color: rgba($color-black, 0);
+    }
     &.lightMode {
       background-color: rgba($color-white, 0.9);
+      &.menuOpen {
+        background-color: rgba($color-white, 0);
+      }
     }
   }
 
-  .menu {
+  .burgerMenu {
+    display: inline-block;
     position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    width: 30px;
+    height: 30px;
 
-    .links {
-      position: relative;
-      margin: 0;
-      padding: 0;
-      display: inline-block;
-      flex-direction: row;
+    .line {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      transform-origin: center center;
+      background-color: $color-white;
+      transition-property: opacity, transform, background-color;
+      transition-duration: $transition-fast, $transition-fast, $transition-normal;
+      transition-timing-function: $easeInOutCubic, $easeInOutCubic, ease-in-out;
+      opacity: 1;
 
-      .link {
-        position: relative;
-        display: inline-block;
-        padding: 0 $spacing-m;
-        margin: 0 $spacing-m;
-        @include type-link;
-        color: darken($color: $color-white, $amount: 40);
-        
-        &:hover {
-          color: darken($color: $color-white, $amount: 0);
+      &.top {
+        top: 0
+      }
+
+      &.middle1,
+      &.middle2 {
+        top: 50%;
+        margin-top: -1px;
+      }
+
+      &.bottom {
+        bottom: 0
+      }
+    }
+
+    &.open {
+      .line {
+        &.top,
+        &.bottom {
+          opacity: 0;
         }
-
-        &::after {
-          content: ' ';
-          position: absolute;
-          bottom: -6px;
-          width: 30px;
-          height: 1px;
-          left: 50%;
-          margin-left: -15px;
-          background-color: $color-white;
-          transform: scaleX(0);
-          transition: transform $transition-normal $easeInOutCubic;
-          will-change: transform;
+        &.middle1 {
+          transform: rotate(45deg);
         }
-
-        &.isActive {
-          color: darken($color: $color-white, $amount: 0);
-          &::after {
-            transform: scaleX(1);
-          }
+        &.middle2 {
+          transform: rotate(-45deg);
         }
       }
     }
   }
+
+  &.lightMode {
+    .burgerMenu {
+      .line {
+        background-color: $color-darkGrey;
+      }
+    }
+  }
+
+  
 
   &.lightMode {
     .logo {
       :global {
         .base-line {
           fill: $color-darkGrey;
-        }
-      }
-    }
-    .menu {
-      .links {
-        .link {
-          color: lighten($color: $color-darkGrey, $amount: 20);
-          &:hover {
-            color: lighten($color: $color-darkGrey, $amount: 0);
-          }
-          &.isActive {
-            color: lighten($color: $color-darkGrey, $amount: 0);
-          }
-          &::after {
-            background-color: $color-darkGrey;
-          }
-        }
-      }
-    }
-  }
-
-  .darkmodeSwitch {
-    position: relative;
-    display: inline-block;
-    width: 42px;
-    height: 20px;
-    border: 1px solid darken($color: $color-white, $amount: 40);
-    border-radius: 10px;
-    cursor: pointer;
-    transition: border $transition-normal ease-in-out;
-    will-change: border;
-    margin-left: 30px;
-
-    .knob {
-      position: absolute;
-      display: inline-block;
-      width: 14px;
-      height: 14px;
-      background-color: darken($color: $color-white, $amount: 40);
-      border-radius: 7px;
-      top: 2px;
-      left: 2px;
-      transition: background-color $transition-normal ease-in-out, transform $transition-normal $easeInOutCubic;
-      will-change: background-color, transform;
-      transform: translate3d(0, 0, 0);
-    }
-
-    &:hover {
-      .knob {
-        background-color: darken($color: $color-white, $amount: 0);
-      }
-    }
-
-    .switchIcon {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      opacity: 1;
-      transition: opacity $transition-normal ease-in-out, transform $transition-normal $easeInOutCubic;
-      will-change: opacity, transform;
-
-      svg {
-        width: 100%;
-        height: 100%;
-      }
-
-      &.moon {
-        right: 6px;
-        transform: translate3d(0, 0, 0);
-        width: 8px;
-        height: 8px;
-        top: 5px;
-        svg {
-          path {
-            fill: darken($color: $color-white, $amount: 40)
-          }
-        }
-      }
-      
-      &.sun {
-        left: 2px;
-        width: 20px;
-        height: 20px;
-        top: -1px;
-        opacity: 0;
-        transform: translate3d(5px, 0, 0);
-        svg {
-          path {
-            fill: lighten($color: $color-darkGrey, $amount: 20);
-          }
-        }
-      }
-    }
-  }
-
-  &.lightMode {
-    .darkmodeSwitch {
-      border: 1px solid color lighten($color: $color-darkGrey, $amount: 20);
-      .knob {
-        background-color: lighten($color: $color-darkGrey, $amount: 20);
-        transform: translate3d(22px, 0, 0)
-      }
-      &:hover {
-        .knob {
-          background-color: lighten($color: $color-darkGrey, $amount: 0);
-        }
-      }
-      .switchIcon {
-        &.moon {
-          transform: translate3d(-5px, 0, 0);
-          opacity: 0;
-        }
-        &.sun {
-          opacity: 1;
-          transform: translate3d(0px, 0, 0);
         }
       }
     }
