--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -239,17 +239,26 @@
 }
 
 .videoContainer {
-  position: relative;
-  width: 40%;
-  // padding-top: 40%;
-  margin: -25vh 5% 0;
+  position: absolute;
+  top: 0;
+  right: 5vw;
+  width: 35vw;
+  height: 0;
+  padding-top: 35vw;
+  pointer-events: none;
+  
+  @include device-l {
+    width: 50vw;
+    padding-top: 50vw;
+    right: -10vw;
+    top: 5vh;
+  }
 
-  video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+  @include device-m {
+    // top: 2vh;
+    right: 5vw;
+    // width: 50vw;
+    // margin: 0;
   }
 }
 
