--- a/src/components/ImageSequence/styles.module.scss
+++ b/src/components/ImageSequence/styles.module.scss
@@ -2,7 +2,9 @@
 @import '../../styles/mixins.scss';
 
 .imageSequence {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 0;
   padding-top: 100%;
