--- a/src/components/MobileMenu/mobilemenu.module.scss
+++ b/src/components/MobileMenu/mobilemenu.module.scss
@@ -13,12 +13,7 @@
   height: 100vh;
   background-color: $color-background;
   transform-origin: center left;
-  // transition-property: transform, background-color;
-  // transition-duration: $transition-normal, $transition-normal;
-  // transition-timing-function: $easeInOutCubic, ease-in-out;
-  transition-property: transform;
-  transition-duration: $transition-normal;
-  transition-timing-function: $easeInOutCubic;
+  transition: transform $transition-normal $easeInOutCubic;
 
   &.lightMode {
     background-color: $color-white;
