--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -83,12 +83,7 @@
       left: 0;
       transform-origin: center center;
       background-color: $color-white;
-      // transition-property: opacity, transform, background-color;
-      // transition-duration: $transition-fast, $transition-fast, $transition-normal;
-      // transition-timing-function: $easeInOutCubic, $easeInOutCubic, ease-in-out;
-      transition-property: opacity, transform;
-      transition-duration: $transition-fast, $transition-fast;
-      transition-timing-function: $easeInOutCubic, $easeInOutCubic;
+      transition: opacity $transition-fast $easeInOutCubic, transform $transition-fast $easeInOutCubic;
       opacity: 1;
 
       &.top {
