--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -101,7 +101,7 @@
       width: 70px;
       height: 30px;
       border-radius: 15px;
-      margin: $spacing-l 0 $spacing-xl 0;
+      margin: $spacing-xl 0 $spacing-xl 0;
       border-color: darken($color: $color-white, $amount: 40);
     }
 
