--- a/src/components/MobileMenu/mobilemenu.module.scss
+++ b/src/components/MobileMenu/mobilemenu.module.scss
@@ -14,6 +14,7 @@
   background-color: $color-background;
   transform-origin: center left;
   transition: transform $transition-normal $easeInOutCubic;
+  padding-top: $spacing-xl;
 
   &.lightMode {
     background-color: $color-white;
